# TrialChain

./: .gitignore  README.md  stack.yaml  trialchain.cabal
app/: HelperCli.hs
src/: CryptoLib.hs  Rules.hs  Server.hs  TransactionLib.hs
test/: Spec.hs
