name:                trialchain
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/aserven/trialchain#readme
license:             GPL-3
license-file:        LICENSE
author:              Albert Serven
maintainer:          albert@serven.cat
copyright:           2020 Albert Serven
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Server, CryptoLib, TransactionLib, Rules
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , bytestring
                     , base64-bytestring
                     , cryptonite
                     , ed25519
                     , servant-server
                     , stm
                     , mtl
                     , memory
                     , text
                     , transformers
                     , wai
                     , wai-logger
                     , warp
  default-language:    Haskell2010

executable helper-cli
  hs-source-dirs:      app
  main-is:             HelperCli.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , trialchain
                     , bytestring
                     , directory
                     , memory
                     , random
                     , text
                     , time
                     , turtle
  default-language:    Haskell2010

executable server
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , trialchain
  default-language:    Haskell2010

test-suite trialchain-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , trialchain
                     , text
                     , hspec
                     , hspec-wai
                     , hspec-wai-json
                     , aeson
                     , stm
                     , http-types
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/aserven/trialchain
